manifests/online-auction.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-auction
  labels:
    app: online-auction
    obj: deployment
spec:
  selector:
    matchLabels:
      app: online-auction
      obj: pod
  template:
    metadata:
      labels:
        app: online-auction
        obj: pod
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: online-auction
        image: ghcr.io/onukwilip/online-auction:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: oa-port
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.2"
          limits:
            memory: "256Mi"
            cpu: "0.4"
