manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-auction-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: onlineauction.onukwilip.chickenkiller.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-auction-service
            port:
              number: 3000
  - host: kubeview.onukwilip.chickenkiller.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-auction-service
            port:
              number: 3000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.onukwilip.chickenkiller.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  - host: prometheus.onukwilip.chickenkiller.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
